--- a/deployment.yml
+++ b/deployment.yml
@@ -21,9 +21,9 @@ metadata:
 
 spec:
   ports:
-    port: 3000
-    protocol: TCP
-    targetPort: 3000
+    - port: 3000
+      protocol: TCP
+      targetPort: 3000
   selector:
     app: clienteapi
   sessionAffinity: None
